--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,18 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.citesoftware.guiadebsas.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="@string/menu_mapa"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.citesoftware.guiadebsas.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_lista"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.citesoftware.guiadebsas.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_soporte"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
